--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+## Ignore Environment Variable Files
+.env
+.rbenv-vars
 # Ignore bundler config.
 /.bundle
 
