--- a/config/storage.yml
+++ b/config/storage.yml
@@ -7,12 +7,19 @@ local:
   root: <%= Rails.root.join("storage") %>
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-# amazon:
-#   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
-#   bucket: your_own_bucket
+amazon_dev:
+  service: S3
+  access_key_id: <%= ENV['PROD_AMAZON_ACCESS_KEY_ID'] %>
+  secret_access_key: <%= ENV['PROD_AMAZON_SECRET_ACCESS_KEY'] %>
+  region: <%= ENV['PROD_AMAZON_REGION'] %>
+  bucket: <%= ENV['DEV_AMAZON_BUCKET'] %>
+
+amazon_prod:
+  service: S3
+  access_key_id: <%= ENV['PROD_AMAZON_ACCESS_KEY_ID'] %>
+  secret_access_key: <%= ENV['PROD_AMAZON_SECRET_ACCESS_KEY'] %>
+  region: <%= ENV['PROD_AMAZON_REGION'] %>
+  bucket: <%= ENV['PROD_AMAZON_BUCKET'] %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
